# frameforge

./: CMakeLists.txt  MANIFEST.in  README.md  package.xml  prof_extractor.py  setup.py
docs/: tutorial.md
freecad/frameforge/: __init__.py  _utils.py  create_end_miter_tool.py  create_profiles_tool.py  create_trimed_profiles_tool.py  create_trimmed_profiles_tool.py  init_gui.py  parametric_line.py  profile.py  translate_utils.py  trimed_profile.py  trimmed_profile.py
freecad/frameforge/resources/: resources.qrc
freecad/frameforge/resources/profiles/: metal.json
freecad/frameforge/resources/ui/: create_profiles.ui  create_trimmed_profiles.ui
